# libcli

./: .gitignore  .npmignore  CMakeLists.txt  CMakePresets.json  README.md  go.mod  libcliConfig.cmake.in  package-lock.json  package.json  tsconfig.json  vcpkg.json
.side/: .gitignore  manifest
.side/scripts/: build  package
.side/targets/: target-main
cpp/: README.md
cpp/include/cli/: app.h  arg.h  cli.h  cmd.h  fn.h  help.h  opt.h  version.h
cpp/include/cli/details/: app.inl  arg.inl  cmd.inl  fn.inl  opt.inl  utils.inl
cpp/test/: app_test.cpp  arg_test.cpp  builtin_test.cpp  cmd_test.cpp  opt_test.cpp
examples/command_options/src/: main.cpp
examples/default_help/: CMakeLists.txt
examples/default_help/src/: main.cpp
examples/global_options/src/: main.cpp
go/: README.md  app.go  arg.go  cmd.go  complete.go  fn.go  help.go  opt.go  opt_test.go  utils.go  utils_test.go  version.go
include/cli/: app.h  cli.h  command.h  define.h  domain.h  help.h  option.h  version.h  with_options.h
node/src/: application.ts  argument.ts  common.ts  complete.ts  decorator.ts  execute.ts  feature.ts  help.ts  index.ts  option.ts
node/types/: application.d.ts  argument.d.ts  common.d.ts  complete.d.ts  decorator.d.ts  execute.d.ts  feature.d.ts  help.d.ts  index.d.ts  option.d.ts
src/: app.cpp  command.cpp  domain.cpp  help.cpp  option.cpp  version.cpp  with_options.cpp
